--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
 		"kint-php/kint": "^3.3",
 		"laminas/laminas-escaper": "^2.6",
 		"psr/log": "^1.1",
-		"phpmailer/phpmailer": "^6.8"
+		"phpmailer/phpmailer": "^6.8",
+		"twilio/sdk": "^7.4"
 	},
 	"require-dev": {
 		"codeigniter4/codeigniter4-standard": "^1.0",
