--- a/.env.copy
+++ b/.env.copy
@@ -50,7 +50,7 @@
 #--------------------------------------------------------------------
 
  database.default.hostname = localhost
- database.default.database = southcebuadventure
+ database.default.database = byte
  database.default.username = root
  database.default.password =
  database.default.DBDriver = MySQLi
